--- a/External_OpenSSL.cmake.in
+++ b/External_OpenSSL.cmake.in
@@ -7,9 +7,9 @@ set(EP_SOURCE_DIR ${CMAKE_BINARY_DIR}/openssl-src)
 set(EP_BINARY_DIR ${CMAKE_BINARY_DIR}/openssl-src)
 set(EP_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
 
-set(openssl_TAG 1.1.1d)
-set(openssl_SHA256 1e3a91bc1f9dfce01af26026f856e064eab4c8ee0a8f457b5ae30b40b8b711f2)
-set(openssl_URL "http://www.openssl.org/source/openssl-${openssl_TAG}.tar.gz")
+set(openssl_TAG 1.0.2u)
+set(openssl_SHA256 ecd0c6ffb493dd06707d38b14bb4d8c2288bb7033735606569d8f90f89669d16)
+set(openssl_URL "http://www.openssl.org/source/old/1.0.2/openssl-${openssl_TAG}.tar.gz")
 
 include(ProcessorCount)
 ProcessorCount(CPU_COUNT)
@@ -26,7 +26,7 @@ else()
   set(OPENSSL_PATCH_COMMAND "")
   set(OPENSSL_CONFIG_COMMAND ./config --prefix=${EP_INSTALL_DIR})
   set(OPENSSL_BUILD_COMMAND make -j ${CPU_COUNT})
-  set(OPENSSL_INSTALL_COMMAND make install_sw install_ssldirs)
+  set(OPENSSL_INSTALL_COMMAND make install_sw)
 endif()
 
 ExternalProject_Add(openssl
